Split document across multiple files

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -407,267 +407,25 @@ Telephone: (800) 555--1212, Fax: (888) 555--1212}
 % make the title area
 \maketitle
 
-
-\begin{abstract}
-%\boldmath
-
-    % What does "correctly" mean in general? % Correct -> does the program behave the same as in the happy path when it
-    % encounters an error. % Too specific on the what we are breaking, only return values. Could be misordered UDP.  Be
-    % more general about the faults we are trying to do.  Intro sentence -> may programmers have programs that work fine
-    % in development environment and then fail in production % We are able to use this tool to induce and observe
-    % behavior without having to go through deployment % Introduction has to have a story like this % Motivation about
-    % problem, summary about contribution, more detail about contribution %
-
-    One of the challenges of software development is anticipating and dealing with the differences in the variety of
-    environments in which an application may run. For example, an application may work correctly on the developer's low
-    latency, local network but fail when run across a node that performs network address translation or across a link
-    that introduces high latency into network communications. This paper introduces CrashSimulator, a tool designed to
-    induce crashes in applications that do not properly handle these unanticipated conditions.  CrashSimulator
-    accomplishes this in three steps. First, it analyzes a system call trace of an application collected using a utility
-    like \emph{strace} in order to identify a set of system calls that are commonly mishandled by developers. Next, it
-    injects faults into the running application at the previously identified points by using \emph{ptrace}. Finally, it
-    observes whether or not the application continued to operate normally after the encountering the error and reports
-    its findings to the developer. As a result, the developer is made aware of deficiencies in the application without
-    having to go through a potentially complex and costly deployment or beta test scenario. Because CrashSimulator
-    operates using black-box analysis utilities it does not require access to an application's source code.
-    CrashSimulator was used to analyze \emph{<<somenumber>>} commonly used open and closed source applications.  Its
-    findings were compared to tickets listed in the bug tracking suites of these applications.  It was able to
-    successfully identify \emph{<<somenumber>>} of bugs listed in these suites and \emph{<<someothernumber>>} of bugs
-    that had not yet been discovered.
-
-\end{abstract}
+\input{CSAbstract}
 
 \IEEEpeerreviewmaketitle{}
 
+\input{CSIntro}
 
+\input{CSBackgroundAndMotivation}
 
-\section{Introduction}
-% no \IEEEPARstart
+\input{CSApproachDetails}
 
-    One major hurdle in developing robust applications is anticipating and dealing with edge conditions and faults that
-    compromise and applications ability to run as intended. A common source of faults is the environment in which an
-    application runs. The typical approach to eliminating faults in an application is the creation of a suite of tests that
-    exercise the applications functionality and ensure that it always acts appropriately. In the case of issues that arise
-    from an application's environment it is not possible to enumerate and test for an acceptable amount of faults due to the
-    variety of hardware and software systems that make up the environment.
+\input{CSEvaluation}
 
-    This problem is of particular concern in the context of today's highly network dependent applications. With the
-    explosion of mobile computing and software as a service products applications that are completely reliant on
-    well-behaved network communication are increasingly common. As a result a great deal of emphasis must be placed on
-    properly dealing with faults in these network communications. Unfortunately, identifying these faults is difficult due
-    to the inability of the developer to replicate all possible application environments and exhaust all possible code
-    paths.
+\input{CSRelatedWork}
 
-    Existing white-box testing tools like DART and SAGE testing tools rely on static analysis and symbolic execution of
-    code in order to determine sets of inputs that exercise particular code paths. DART symbolically executes an
-    applications source code in order to facilitate its testing. This limits DART to operating only on programs written
-    in C. SAGE improves on this strategy symbolically executing an application's x86 machine code instructions but this
-    results in an architecture based rather than programming language based limitation. CrashSimulator avoids these
-    issues by relying on transparent observation of native execution of an application.
+\input{CSConclusion}
 
-    %% Does this need to be here? Am I just arguing against static analysis???
-    Symbolic execution is computationally expensive and can result in deviations where the symbolic execution of code
-    Doesn't accurately represent the actual execution of code.
-    %% Is this a true sentence??
-    Both tools focus on how the application under test behaves when given a particular set of inputs without taking the
-    program's environment into account. DART assumes that external functions are side effect free (I.e.\ their execution
-    does not modify program memory). Alternatively, CrashSimulator executes standard, non-instrumented versions of an
-    application and transparently injects faults via the programs interaction with the environment in which it is
-    running through system calls.
+\input{CSAcknowledgments}
 
-    %%% Need examples of black-box testing tools
-    The alternative, black-box tools, have their own set of issues. They do not have an understanding of what an
-    application is actually doing during execution which means they are only able to submit inputs and observe outputs.
-    They cannot identify specifically the source of faults in an application.
-
-    In light of these shortcomings, an alternative approach is needed to provide developers with confidence that their
-    applications are sufficiently free of environment induced faults.  CrashSimulator is a tool designed to meet this
-    need by providing automated identification of environment-induced faults through simulated deviations from the
-    normal flow of system calls an application makes to interact with its environment.
-
-    CrashSimulator is able to test applications in a completely black-box manner. It utilizes system call traces
-    collected during execution of the program to identify points for fault injection and injects the faults on
-    subsequent runs using ptrace to hook the applications execution and access its memory and registers. It then
-    evaluates whether the program successfully handled the injected fault or not and reports these results to the
-    developer.
-
-\section{Background and Motivation}
-
-    %%This sentence is very similar to the one from the Sniper paper
-    This section describes the techniques and terminologies used in other automatic testing frameworks.
-
-    \textbf{Black-box vs White-box Testing:} There are two primary approaches to automated software testing: black-box
-    testing and white-box testing. White-box testing tools require access to an applications source code in order to test
-    it. Typically this means that the testing tool is able to better ``understand'' the application. This can result in more
-    efficient and targeted testing. In the case of DART, the applications source code is used to generate a ``test
-    interface'' for each of the functions that make up the application. SAGE takes a slightly different approach in that it
-    works with compiled application code rather than source code. Its testing still falls into the white-box category
-    because of the way it attempts interpret and reason about the application's machine code.
-
-    Black-box tools work only by manipulating inputs into the application and observing outputs. Because they do not
-    attempt to understand the internal workings of an application, these tools are typically less complex from an
-    implementation and runtime standpoint. The price of this lack of complexity is reduced the inability to target
-    specific code paths or identify where faults come from.
-
-    \textbf{System Call Trace Analysis:} CrashSimulator is based on prior work from two projects: NetCheck and
-    CheckAPI.\@  It, like these tools, analyzes system call traces captured from an execution of the application under
-    test in order to determine locations that are likely to to be sources of faults. These traces are captured using
-    strace and dtrace, the standard tools made available for this purpose in Linux and OS X respectively. Each system
-    call is evaluated within the context of prior system calls, their parameters, and return values. This system call
-    context is compared an ideal model and deviations from this model are logged.
-
-    \textbf{Crash Simulation:} Once CrashSimulator has generated a series of potential faults from its analysis of an
-    application's system call trace the process of verifying the presence of faults can begin. Verification handled by
-    running an instance of the application and injecting one of the potential faults identified during the analysis
-    step.  The results of this faulty execution are monitored and any deviations in output from the ``correct'' output
-    are recorded. Faults that result in an application crashing are also recorded.
-
-\section{CrashSimulator Approach Details}
-
-    %%% Verify information on supported trace formats %%%
-    \textbf{The Trace Gathering Process:} The first step in CrashSimulator's operation is to gather a trace of the
-    system calls made by the application during a normal run. Because CrashSimulator's trace analysis engine is based on
-    prior work from the NetCheck supported trace gathering tools include \emph{strace} on Linux and \emph{dtrace} on OS
-    X.
-
-    %%% How much information should be included about NetCheck's inner workings here? Should they just be referred to
-    %%% the NetCheck paper?
-    %%% Talk about multiple traces?
-    \textbf{Trace Analysis:} CrashSimulator's trace analysis engine is based on NetCheck. NetCheck uses two strategies
-    to identify potential fault areas from system call trace. The first is a model based simulation of the system calls
-    relevant to network communication from the input trace. System calls are organized according to a POSIX socket API
-    dependency graph and prioritized based on the order in which the system calls should be made in an ideal scenario.
-    For example, a client application should not be making a \emph{connect} system call before it has set up its
-    socket with the appropriate \emph{socket} system call. The model assumes that all system calls are atomic and that
-    they cannot happen simultaneously. This allows a definite global order to be created.
-
-    Once a global ordering is in place each system call is evaluated based on the previous system calls. Return values
-    and parameters passed in are taken into account. If the system call is feasible it is accepted and the next system
-    call is evaluated. If the system call is not feasible given the current system call context it is rejected and
-    logged. These rejected system calls are treated as opportunities to inject faults during the next step of the
-    process.
-
-    \textbf{Fault Injection:} Once a set of potential fault injection points has been identified CrashSimulator uses
-    \emph{ptrace} inject faults on a live execution of the program. At this point, two faults types identifiable by
-    NetCheck are supported: modification of return values from network system calls and reordering of UDP packets.
-    These faults were chosen because of high impact they can have on applications that don't handle them properly and
-    the frequency with which developers have an incorrect understanding of how these system calls can behave in an
-    imperfect environment.
-
-    %% I can go into much more detail with the ptrace implementation stuff if I need to
-    \textbf{Return Value Modification:} One way CrashSimulator can inject faults into the running application is to
-    modify the return values of interesting system calls identified in the previous trace analysis step. First, the
-    CrashSimulator parent application is launched and configured.
-
-        launching of parent application
-        setup of child application under test
-        run child application
-        For for each system call determine if it is one we are interested in as determined by analysis
-            e.g.\ is this the 4th call to recv?
-        Modify EAX/RAX register after system call completion to contain new return value
-            New return value random? Smaller than present return value? Some constant -1?
-            What do we do about 32-bit vs 64-bit
-
-    %% What is the process for culling our set of unit tests for instances where there are a huge number of permutations
-    %% of packet orderings
-    \textbf{Catalog-Based Anomalies:} A second category of faults CrashSimulator can produce are known as catalog-based
-    faults. These faults are injected in two steps. First, the normal run trace is parsed in its entirety for system
-    calls in a specific set associated with the fault being injected and the data items passed into these system calls
-    are recorded in a data item catalog. Next, the application under test is run repeatedly with each run receiving a
-    different ordering of data items from the catalog for the corresponding system calls. One example of a fault
-    CrashSimulator can inject in such situations is unhandled out of order UDP datagrams. Consider the following
-    pseudo-code listing:
-
-    \begin{verbatim}
-        int main() {
-            socket = setupUdpSocket()
-            data1 = recvfrom(socket)
-            processData1(data1)
-            data2 = recvfrom(socket)
-            processData2(data2)
-        }
-    \end{verbatim}
-
-    This listing sets up a UDP socket and receives two datagrams from the socket processing each with the appropriate
-    function. A C program that implements this pseudo-code will produce a normal flow system call trace as follows:
-
-    \begin{verbatim}
-        ...
-        socket(PF_INET, SOCK_DGRAM, IPPROTO_UDP) = 3
-        bind(3, {sa_family=AF_INET, sin_port=htons(6666), sin_addr=inet_addr("0.0.0.0")}, 16) = 0
-        recvfrom(3, "test\n", 256, 0, {sa_family=AF_INET, sin_port=htons(51490), sin_addr=inet_addr("127.0.0.1")}, [16]) = 5
-        ...
-        write(1, "Process 1: test\n", 16)       = 16
-        recvfrom(3, "testagain\n", 256, 0, {sa_family=AF_INET, sin_port=htons(51490), sin_addr=inet_addr("127.0.0.1")}, [16]) = 10
-        write(1, "Process 2: testagain\n", 21)  = 21
-        ...
-    \end{verbatim}
-
-    The above program assumes that datagram 1 will always arrive first and datagram 2 will always arrive second. UDP
-    makes no ordering guarantees so the reverse is possible. This would result in datagram 2 being processed as datagram
-    1 and vice versa. Crash simulator would inject this fault as follows. First, it would parse the system call trace
-    and identify all calls to recvfrom, storing the data that was received in a data catalog and the identifying
-    information pertaining to the socket it was received from. Second, it would re-run the application under test and
-    send a different ordering of data from the data catalog to the socket in question. From the above example,
-    ``testagain'' would be sent to the first receive from and ``test'' would be sent to the second recvfrom resulting in
-    each data item being parsed by the incorrect function. CrashSimulator would then report abnormalities in the
-    application's behavior. \textbf{How are we going to handle situations where this is a silent failure}
-
-\section{Evaluation}
-
-    \textbf{Bugs Identified}
-    %% Intro paragraph
-    First, CrashSimulator was evaluated against NUMBER of popular tools with public bug trackers available. The goal was
-    to identify bugs from each tool's bug tracker (both fixed and unfixed) that are related to the faults that
-    CrashSimulator can inject. Next, CrashSimulator was run against these tools fault counts were collected. A
-    comparison of the number of faults identified by the tool's users in the tool's bug tracker to the number of faults
-    identified by CrashSimulator is presented in the table below.
-
-    \emph{\textbf{INSERT TABLE HERE}}
-
-    \textbf{Limitations}
-        Multi-threaded stuff is an issue for both NetCheck and CheckAPI
-
-\section{Related Work}
-
-    What goes here?
-
-\section{Conclusion}
-
-    Minimizing the number of faults present in the applications they write is a key concern for software developers. A
-    number of automated testing techniques have been created in order to meet this goal. The most sophisticated of these
-    existing techniques focus on either analyzing an applications source code or machine code in order to gain an
-    understanding of the inputs required to exercise an applications code paths and then exercising them with the goal
-    of exposing faults. These techniques focus on the application itself to the neglect of the application's environment
-    which can be a source of numerous faults that cannot be identified by testing the application in isolation. To
-    combat this problem this work presents CrashSimulator, a tool that analyzes system call traces of application in
-    order to facilitate the injection of environment-based faults into the application for testing purposes.
-
-    The goal of CrashSimulator is to allow developers to identify unhandled edge cases at the intersection of their
-    application and the environment it is running in an automated fashion. CrashSimulator's ability to test an
-    application in a completely black-box manner, as well as its language-agnostic approach to application analysis,
-    gives considerable advantage over similar tools in the space. \textbf{NUMBER} major applications with public facing
-    bug trackers were tested using CrashSimulator and CrashSimulator was able to identify \textbf{PERCENT} of bugs
-    related to anomalies it tests for that had previously been located manually and reported. Additionally,
-    \textbf{NUMBER} of open source projects with existing unit test suites were examined and CrashSimulator was able to
-    improve test coverage in each of them by providing additional meaningful unit tests.
-
-
-
-
-% use section* for acknowledgement
-\section*{Acknowledgment}
-
-
-The authors would like to thank\ldots
-
-\begin{thebibliography}{1}
-
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
-
-\end{thebibliography}
+\input{CSBibliography}
 
 \end{document}
 
