--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -102,3 +102,10 @@
     each data item being parsed by the incorrect function. CrashSimulator would then report abnormalities in the
     application's behavior. \textbf{How are we going to handle situations where this is a silent failure}
 
+    \subsection{Limitations}
+
+    %% This text will need to be updated based on discussion about handling testing of interpreted languages
+    In situations where CrashSimulator is testing an application written in an interpreted language the possibility
+    exists that faults will be found in the interpreter rather than the application itself. For example, CrashSimulator
+    may modify system calls made by the interpreter for purposes that are independent from the application under test
+    This could result in the interpreter itself behaving improperly...........
